--- a/packages/learn-lerna-app2/package.json
+++ b/packages/learn-lerna-app2/package.json
@@ -2,6 +2,9 @@
 	"name": "learn-lerna-app2",
 	"version": "0.1.0",
 	"private": true,
+	"publishConfig": {
+		"registry": "http://localhost:8081/repository/npm-pattern-editor/"
+	},
 	"dependencies": {
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
