--- a/packages/learn-lerna-app2/package.json
+++ b/packages/learn-lerna-app2/package.json
@@ -1,15 +1,15 @@
 {
 	"name": "learn-lerna-app2",
-	"version": "0.1.0",
+	"version": "1.0.0",
 	"private": true,
 	"publishConfig": {
 		"registry": "http://localhost:8081/repository/npm-pattern-editor/"
 	},
 	"dependencies": {
+		"learn-lerna-share-lib": "^1.0.0",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
-		"react-scripts": "2.1.8",
-		"learn-lerna-share-lib": "1.0.0"
+		"react-scripts": "2.1.8"
 	},
 	"scripts": {
 		"start": "react-scripts start",
