--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,8 @@
 {
 	"packages": ["packages/*"],
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"changelog": {
+		"repo": "cartooncatfish/learn-lerna",
 		"labels": {
 			"enhancement": ":rocket: Enhancement",
 			"bug": ":bug: Bug Fix",
