--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,8 @@
 {
-	"packages": ["packages/*"],
-	"version": "1.1.0",
+	"packages": [
+		"packages/*"
+	],
+	"version": "1.1.1",
 	"changelog": {
 		"repo": "cartooncatfish/learn-lerna",
 		"labels": {
