--- a/packages/share-libs/package.json
+++ b/packages/share-libs/package.json
@@ -2,7 +2,8 @@
 	"name": "learn-lerna-share-lib",
 	"version": "1.1.11",
 	"description": "The share lib of the system",
-	"main": "index.js",
+	"main": "lib/index.js",
+	"types": "lib/index.d.ts",
 	"publishConfig": {
 		"registry": "http://localhost:8088/repository/npm-private/"
 	},
